--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,38 @@ dependencies:
   connectivity_plus: ^5.0.1
   animate_do: ^3.1.2
 
+  device_info_plus: ^4.1.3
+  flutter_lints: ^2.0.0
+  intl: 0.18.1
+  flutter_email_sender: ^5.1.0
+  shared_preferences: ^2.0.15
+  intl_phone_field: ^3.1.0
+  image_picker: ^0.8.6
+  equatable: ^2.0.5
+  readmore: ^2.2.0
+  pull_to_refresh: ^2.0.0
+  flutter_markdown: ^0.6.12
+  golden_toolkit: ^0.13.0
+  flutter_screenutil: ^5.6.0
+  font_awesome_flutter: ^10.2.1
+  flutter_phoenix: ^1.1.0
+  flutter_svg: ^1.1.6
+  flutter_html: ^3.0.0-alpha.6
+  percent_indicator: ^4.2.2
+  carousel_slider: ^4.1.1
+  shimmer: ^2.0.0
+  video_player: ^2.4.10
+  lottie: ^2.1.0
+  reorderables: ^0.5.1
+  comment_tree: ^0.3.0
+  fl_chart: ^0.55.2
+  overlay_support: ^2.1.0
+  path_drawing: ^1.0.1
+  scroll_indicator: ^0.0.3
+  http_mock_adapter: ^0.6.0
+  flavor_config: ^1.3.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,7 +85,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
