--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   path_provider: ^2.1.1
   connectivity_plus: ^5.0.1
   animate_do: ^3.1.2
-
+  syncfusion_flutter_charts: ^23.1.42
   device_info_plus: ^4.1.3
   flutter_lints: ^2.0.0
   intl: 0.18.1
