--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,11 @@ dependencies:
   scroll_indicator: ^0.0.3
   http_mock_adapter: ^0.6.0
   flavor_config: ^1.3.0
+  awesome_notifications: ^0.8.2
+  awesome_notifications_core: ^0.8.0
+  awesome_notifications_fcm: ^0.8.0
+  firebase_core: ^2.20.0
+  firebase_messaging: ^14.7.2
 
 
 dev_dependencies:
