--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,11 @@ dependencies:
   awesome_notifications_fcm: ^0.8.0
   firebase_core: ^2.20.0
   firebase_messaging: ^14.7.2
+  flutter_background_service: ^5.0.2
+  flutter_local_notifications: ^16.1.0
+  permission_handler: ^11.0.1
+  timezone: ^0.9.2
+  sqflite: ^2.3.0
 
 
 dev_dependencies:
