--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   awesome_notifications: ^0.8.2
   awesome_notifications_core: ^0.8.0
   awesome_notifications_fcm: ^0.8.0
+  anim_search_bar: ^2.0.3
   firebase_core: ^2.20.0
   firebase_messaging: ^14.7.2
 
