--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,9 @@ dependencies:
   permission_handler: ^11.0.1
   timezone: ^0.9.2
   sqflite: ^2.3.0
+  android_alarm_manager_plus: ^3.0.3
+  workmanager: ^0.5.2
+
 
 
 dev_dependencies:
