--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,8 @@ dependencies:
   sqflite: ^2.3.0
   workmanager: ^0.5.2
   flutter_slidable: ^3.0.1
+  geolocator: ^10.1.0
+  animated_splash_screen: ^1.3.0
 
 
 dev_dependencies:
