--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
