--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,11 +89,15 @@ dependencies:
   flutter_slidable: ^3.0.1
   geolocator: ^10.1.0
   animated_splash_screen: ^1.3.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
